--- a/Day 13/src/main/resources/application.properties
+++ b/Day 13/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ECOMMERCE
+spring.application.name=ONLINEINSURANCE
 # MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/onlineinsurances
 spring.datasource.username=root
